examples/test/testpolicy16803.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16803
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key29: value41
      key44: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value11
          key45: value36
          key8: value10
      podSelector:
        matchLabels:
          key17: value18
          key47: value8
